Added filtering criterias to all tools and formated the style to be coherent.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -54,6 +54,7 @@
                 <option value="Image">Image</option>
                 <option value="Audio">Audio</option>
                 <option value="Video">Video</option>
+                <option value="Other">Other</option>
               </select>
             </div>
             <div style="flex: 1; min-width: 120px;">
@@ -64,6 +65,9 @@
                 <option value="Image">Image</option>
                 <option value="Audio">Audio</option>
                 <option value="Video">Video</option>
+                <option value="Wireframe">Wireframe</option>
+                <option value="Sitemap">Sitemap</option>
+                <option value="Other">Other</option>
               </select>
             </div>
             <div style="flex: 1; min-width: 120px;">
@@ -72,7 +76,7 @@
                 <option value="">All Prices</option>
                 <option value="Free">Free</option>
                 <option value="Paid">Paid</option>
-                <option value="Subscription">Subscription</option>
+                <option value="Freemium">Freemium</option>
               </select>
             </div>
           </div>
